--- a/dl/tutorials/05_resnet_on_cifar10.ipynb
+++ b/dl/tutorials/05_resnet_on_cifar10.ipynb
@@ -2,44 +2,16 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 13,
       "id": "36600735",
       "metadata": {
         "ExecuteTime": {
           "end_time": "2023-03-01T13:53:58.187088Z",
           "start_time": "2023-03-01T13:53:58.046133Z"
         },
-        "id": "36600735",
-        "outputId": "938df2a1-003f-4bf1-b346-e7478bb1a7be",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 384
-        }
+        "id": "36600735"
       },
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "ModuleNotFoundError",
-          "evalue": "No module named 'utils'",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-            "\u001b[0;32m/tmp/ipython-input-3781702661.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0msys\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mtqdm\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtqdm\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mutils\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mget_mean_and_std\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mmatplotlib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpyplot\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'utils'",
-            "",
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0;32m\nNOTE: If your import is failing due to a missing package, you can\nmanually install dependencies using either !pip or !apt.\n\nTo view examples of installing some common dependencies, click the\n\"Open Examples\" button below.\n\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n"
-          ],
-          "errorDetails": {
-            "actions": [
-              {
-                "action": "open_url",
-                "actionText": "Open Examples",
-                "url": "/notebooks/snippets/importing_libraries.ipynb"
-              }
-            ]
-          }
-        }
-      ],
+      "outputs": [],
       "source": [
         "import torch\n",
         "from torch import nn\n",
@@ -50,31 +22,48 @@
         "import sys\n",
         "from tqdm import tqdm\n",
         "#from utils import get_mean_and_std\n",
-        "import matplotlib.pyplot as plt"
+        "import matplotlib.pyplot as plt\n",
+        "def get_mean_and_std(dataset):\n",
+        "    '''Compute the mean and std value of dataset.'''\n",
+        "    '''dataset: 0-1 range (ToTensor())'''\n",
+        "    dataloader = torch.utils.data.DataLoader(dataset, batch_size=1, shuffle=True, num_workers=2)\n",
+        "    mean = torch.zeros(3)\n",
+        "    std = torch.zeros(3)\n",
+        "    print('==> Computing mean and std..')\n",
+        "    for inputs, targets in tqdm(dataloader):\n",
+        "        for i in range(3):\n",
+        "            mean[i] += inputs[:, i, :, :].mean()\n",
+        "            std[i] += inputs[:, i, :, :].std()\n",
+        "    mean.div_(len(dataset))\n",
+        "    std.div_(len(dataset))\n",
+        "    return mean, std"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "id": "daeda546",
       "metadata": {
         "ExecuteTime": {
           "end_time": "2023-03-01T13:33:26.822630Z",
           "start_time": "2023-03-01T13:33:26.798276Z"
         },
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "id": "daeda546",
-        "outputId": "f37b30bb-a6f0-4862-e368-eac734623717"
+        "outputId": "83e8f66a-9df7-4fb4-884e-3f5b83dd2707"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "sys.version_info(major=3, minor=6, micro=13, releaselevel='final', serial=0)\n",
-            "1.10.2\n",
-            "0.11.3\n",
+            "sys.version_info(major=3, minor=12, micro=11, releaselevel='final', serial=0)\n",
+            "2.8.0+cu126\n",
+            "0.23.0+cu126\n",
             "True\n",
-            "NVIDIA A10\n"
+            "Tesla T4\n"
           ]
         }
       ],
@@ -98,16 +87,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "id": "15ffacfc",
       "metadata": {
         "ExecuteTime": {
           "end_time": "2023-03-01T13:35:42.453362Z",
           "start_time": "2023-03-01T13:35:42.338509Z"
         },
-        "id": "15ffacfc"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "15ffacfc",
+        "outputId": "91151f49-1f4d-4aa2-f143-7ff0130d4874"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.12/dist-packages/torchvision/models/_utils.py:208: UserWarning: The parameter 'pretrained' is deprecated since 0.13 and may be removed in the future, please use 'weights' instead.\n",
+            "  warnings.warn(\n",
+            "/usr/local/lib/python3.12/dist-packages/torchvision/models/_utils.py:223: UserWarning: Arguments other than a weight enum or `None` for 'weights' are deprecated since 0.13 and may be removed in the future. The current behavior is equivalent to passing `weights=None`.\n",
+            "  warnings.warn(msg)\n"
+          ]
+        }
+      ],
       "source": [
         "# train\n",
         "model = models.resnet18(pretrained=False, num_classes=10)"
@@ -134,7 +138,146 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "source": [
+        "in_features = model.fc.in_features\n",
+        "in_features"
+      ],
+      "metadata": {
+        "id": "6F9fpaI3ELxU",
+        "outputId": "685d9baa-5e86-48a6-8c80-9ce16357c262",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "6F9fpaI3ELxU",
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "512"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model"
+      ],
+      "metadata": {
+        "collapsed": true,
+        "id": "CAxWT3YkBVvu",
+        "outputId": "a8b506ce-62e9-4493-825a-d147be067142",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "CAxWT3YkBVvu",
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "ResNet(\n",
+              "  (conv1): Conv2d(3, 64, kernel_size=(7, 7), stride=(2, 2), padding=(3, 3), bias=False)\n",
+              "  (bn1): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+              "  (relu): ReLU(inplace=True)\n",
+              "  (maxpool): MaxPool2d(kernel_size=3, stride=2, padding=1, dilation=1, ceil_mode=False)\n",
+              "  (layer1): Sequential(\n",
+              "    (0): BasicBlock(\n",
+              "      (conv1): Conv2d(64, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+              "      (bn1): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+              "      (relu): ReLU(inplace=True)\n",
+              "      (conv2): Conv2d(64, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+              "      (bn2): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+              "    )\n",
+              "    (1): BasicBlock(\n",
+              "      (conv1): Conv2d(64, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+              "      (bn1): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+              "      (relu): ReLU(inplace=True)\n",
+              "      (conv2): Conv2d(64, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+              "      (bn2): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+              "    )\n",
+              "  )\n",
+              "  (layer2): Sequential(\n",
+              "    (0): BasicBlock(\n",
+              "      (conv1): Conv2d(64, 128, kernel_size=(3, 3), stride=(2, 2), padding=(1, 1), bias=False)\n",
+              "      (bn1): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+              "      (relu): ReLU(inplace=True)\n",
+              "      (conv2): Conv2d(128, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+              "      (bn2): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+              "      (downsample): Sequential(\n",
+              "        (0): Conv2d(64, 128, kernel_size=(1, 1), stride=(2, 2), bias=False)\n",
+              "        (1): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+              "      )\n",
+              "    )\n",
+              "    (1): BasicBlock(\n",
+              "      (conv1): Conv2d(128, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+              "      (bn1): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+              "      (relu): ReLU(inplace=True)\n",
+              "      (conv2): Conv2d(128, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+              "      (bn2): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+              "    )\n",
+              "  )\n",
+              "  (layer3): Sequential(\n",
+              "    (0): BasicBlock(\n",
+              "      (conv1): Conv2d(128, 256, kernel_size=(3, 3), stride=(2, 2), padding=(1, 1), bias=False)\n",
+              "      (bn1): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+              "      (relu): ReLU(inplace=True)\n",
+              "      (conv2): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+              "      (bn2): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+              "      (downsample): Sequential(\n",
+              "        (0): Conv2d(128, 256, kernel_size=(1, 1), stride=(2, 2), bias=False)\n",
+              "        (1): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+              "      )\n",
+              "    )\n",
+              "    (1): BasicBlock(\n",
+              "      (conv1): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+              "      (bn1): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+              "      (relu): ReLU(inplace=True)\n",
+              "      (conv2): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+              "      (bn2): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+              "    )\n",
+              "  )\n",
+              "  (layer4): Sequential(\n",
+              "    (0): BasicBlock(\n",
+              "      (conv1): Conv2d(256, 512, kernel_size=(3, 3), stride=(2, 2), padding=(1, 1), bias=False)\n",
+              "      (bn1): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+              "      (relu): ReLU(inplace=True)\n",
+              "      (conv2): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+              "      (bn2): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+              "      (downsample): Sequential(\n",
+              "        (0): Conv2d(256, 512, kernel_size=(1, 1), stride=(2, 2), bias=False)\n",
+              "        (1): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+              "      )\n",
+              "    )\n",
+              "    (1): BasicBlock(\n",
+              "      (conv1): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+              "      (bn1): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+              "      (relu): ReLU(inplace=True)\n",
+              "      (conv2): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+              "      (bn2): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+              "    )\n",
+              "  )\n",
+              "  (avgpool): AdaptiveAvgPool2d(output_size=(1, 1))\n",
+              "  (fc): Linear(in_features=512, out_features=10, bias=True)\n",
+              ")"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 4,
       "id": "5353f3f1",
       "metadata": {
         "ExecuteTime": {
@@ -150,20 +293,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "id": "b2120b07",
       "metadata": {
         "ExecuteTime": {
           "end_time": "2023-03-01T13:37:27.000403Z",
           "start_time": "2023-03-01T13:37:26.905366Z"
         },
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "collapsed": true,
         "id": "b2120b07",
-        "outputId": "a9d9a8ea-fce3-4053-f80d-e33203313014"
+        "outputId": "00f22113-705b-4d48-81c0-1cc931f083ea"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "----------------------------------------------------------------\n",
             "        Layer (type)               Output Shape         Param #\n",
@@ -265,7 +412,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "id": "303c4526",
       "metadata": {
         "ExecuteTime": {
@@ -283,7 +430,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "id": "8d31ddee",
       "metadata": {
         "ExecuteTime": {
@@ -309,26 +456,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "id": "72dcd7cf",
       "metadata": {
         "ExecuteTime": {
           "end_time": "2023-03-01T13:39:16.359176Z",
           "start_time": "2023-03-01T13:39:16.356724Z"
         },
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "id": "72dcd7cf",
-        "outputId": "e8c0aa00-bd3f-4efc-f465-353a62c4bc8b"
+        "outputId": "bd735c1b-2529-4160-e781-b7018df19464"
       },
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "device(type='cuda')"
             ]
           },
-          "execution_count": 15,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 9
         }
       ],
       "source": [
@@ -347,23 +497,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "id": "421d5a1d",
       "metadata": {
         "ExecuteTime": {
           "end_time": "2023-02-21T16:07:08.617211Z",
           "start_time": "2023-02-21T16:07:07.313136Z"
         },
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "id": "421d5a1d",
-        "outputId": "3d193dc7-374a-4f18-8c88-d7788b43e5e3"
+        "outputId": "f163933a-1d5c-4d90-f8c8-58e4e92a4285"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stderr",
           "text": [
-            "Files already downloaded and verified\n",
-            "Files already downloaded and verified\n"
+            "100%|██████████| 170M/170M [00:13<00:00, 12.5MB/s]\n"
           ]
         }
       ],
@@ -377,7 +529,75 @@
         "                               download=True,\n",
         "                               train=False,\n",
         "                               transform=transforms.ToTensor())\n",
+        "# get_mean_and_std(train_dataset)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def get_mean_and_std_debug(dataset):\n",
+        "    '''Compute the mean and std value of dataset.'''\n",
+        "    '''dataset: 0-1 range (ToTensor())'''\n",
+        "    dataloader = torch.utils.data.DataLoader(dataset, batch_size=1, shuffle=True, num_workers=2)\n",
+        "    mean = torch.zeros(3)\n",
+        "    std = torch.zeros(3)\n",
+        "    print('==> Computing mean and std..')\n",
+        "    for inputs, targets in tqdm(dataloader):\n",
+        "        print(inputs.shape,targets)\n",
+        "        break\n",
+        "        # for i in range(3):\n",
+        "        #     mean[i] += inputs[:, i, :, :].mean()\n",
+        "        #     std[i] += inputs[:, i, :, :].std()\n",
+        "    # mean.div_(len(dataset))\n",
+        "    # std.div_(len(dataset))\n",
+        "    # return mean, std"
+      ],
+      "metadata": {
+        "id": "fcjB_5LFGuCl"
+      },
+      "id": "fcjB_5LFGuCl",
+      "execution_count": 15,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "get_mean_and_std(train_dataset)"
+      ],
+      "metadata": {
+        "id": "6XtjakdMF43B",
+        "outputId": "804ff959-0187-45fd-ccad-c47ada6d8e1b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "6XtjakdMF43B",
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "==> Computing mean and std..\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "100%|██████████| 50000/50000 [01:32<00:00, 543.08it/s]\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(tensor([0.4914, 0.4822, 0.4465]), tensor([0.2023, 0.1994, 0.2010]))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
       ]
     },
     {
